# lab8

./: CMakeLists.txt  Dockerfile
.github/workflows/: CI.yml
hello_world_application/: hello_world.cpp
